[tool.poetry]
name = "lfs-prometheus"
version = "0.1.0"
description = "A dummy project for prometheus course"
authors = ["Nagarajan Ganesan <ennmail@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
