[tool.poetry]
name = "cpu-metrics-exporter"
version = "0.1.0"
description = ""
authors = ["Nagarajan Ganesan <ennmail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "^0.20.0"
psutil = "^5.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
